modification of index

--- a/index.html
+++ b/index.html
@@ -4,9 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Personnal portfolio</title>
 </head>
 <body>
+    <header>
+        <div class="menu">
+            <div class="logo">
+                <!-- Add logo -->
+            </div>
+            <nav>
+                <ul>
+                    <!-- add link -->
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="social">
+                <!-- Change icon -->
+                <img src="/assets/icon_twitter 1.svg">
+                <img src="/assets/icon_instagram 1.svg">
+                <img src="/assets/icon_medium 1.svg">
+            </div>
+        </div>
+        <main>
+            <div class="rightHero">
+                <p>Hi! I'm Cécile.<br> <h1 class="gradient">Full Stack</h1><br>Developer</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sint quam, natus voluptatibus ullam fugiat vero ipsum odit sed eos expedita, enim saepe animi incidunt dolorem minima, quod beatae culpa.</p>
+                <div class="buttonPortfolio">
+                    <!-- add link -->
+                    <a href="#"><button>Let's talk ! →</button></a>
+                    <a href="#">See Portfolio</a>
+                </div>
+            </div>
+            <div class="leftHero">
+                <img src="/assets/Ellipse 2.svg" alt="picture">
+            </div>
+        </main>
+    </header>
+    <section>
+        <h2>I speak</h2>
+        <div class="slider">
+            <div id="html"></div>
+            <div id="css"></div>
+            <div id="js"></div>
+            <div id="react"></div>
+            <div id="php"></div>
+            <div id="bootstrap"></div>
+        </div>
+    </section>
+    <section>
+        <h2>Turning ideas <span class="gradient">Into product</span></h2>
+        <div class="speciality">
+            <div>
+                <img>
+            </div>
+
+        </div>
+    </section>
     
 </body>
 </html>
